[package]
name = "rust_tab" 
version = "0.1.0"
edition = "2021"
authors = ["Adesoji Alu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#geo = "0.20"
#proj = "0.23"
#geozero = "0.6.0"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#geojson = "0.24.1"

[dependencies]
geojson = "0.22.2"  # Check for the latest version on crates.io
geo = "0.22.1"      # For geometric operations
proj = "0.23.0"     # For coordinate projections
geozero = "0.8.0"   # If you still need geozero for other functionalities

[[bin]]
name = "time_program"  # This is the name of the executable
path = "src/time.rs"  # This points to your `time.rs` file
